# django-migration-audit

./: LICENSE  README.md  conftest.py  justfile  pyproject.toml
example/example/: settings.py
src/django_migration_audit/: apps.py
src/django_migration_audit/core/: extractor.py  introspection.py  loader.py  state.py
src/django_migration_audit/invariants/: __init__.py  base.py  columns.py  constraints.py  tables.py
src/django_migration_audit/management/commands/: audit_migrations.py
src/django_migration_audit/tests/: debug.py  settings.py
src/django_migration_audit/tests/fixtures/migrations/: .gitkeep
src/django_migration_audit/tests/integration/: test_drift_detection.py  test_end_to_end.py  test_legacy_schema.py
src/django_migration_audit/tests/unit/: test_extractor.py  test_introspection.py  test_invariants.py  test_loader.py  test_state.py
